--- a/util/README
+++ b/util/README
@@ -1,6 +1,7 @@
 This is the utility, which comes in two parts:
   - the command line frontend
   - the Tcl/Tk GUI
+  - the Python Tkinter GUI
 
 ========== Building ==========
 
@@ -8,9 +9,11 @@ This is the utility, which comes in two parts:
 
 ========== Using ==========
 
-A. To use the Tcl GUI, run `wish GUI`.
+A. To use the Tcl GUI, run `wish GUI.tcl`.
 
-B. To use the command line program, go into the build
+B. To use the Python GUI, run `python GUI.py`.
+
+C. To use the command line program, go into the build
    directory and run `java CLI`. Sending is done by
    running the command `java CLI $IP $PORT $INPUTFILE`, while
    recieving is done via `java CLI $PORT $OUTPUTFILE`.
