--- a/README
+++ b/README
@@ -26,8 +26,7 @@ See util/README on how to build the utility.
 
 ========== Usage ==========
 
-NOTE: There are 2 GUI frontends for PC's. This talks about the Python version, 
-since most will end up using it.
+NOTE: There are 2 GUI frontends for PC's.
 
 Using the program is simple on two Android devices:
   1. Get onto the device which is to __recieve__ the file. Choose a port number 
@@ -39,27 +38,18 @@ Using the program is simple on two Android devices:
      send. Press "Send File" - this device should print "Starting...". When it 
      is done sending the data, the app should print "Starting... Finished".
 
-  3. Any errors are printed as raw Java exceptions, such as (if one leaves the 
-     Port option empty):
-      "Starting... Failed with exception 'NumberFormatException...'"
-
 Similarly, to go PC -> Android:
   1. Repeat step 1 above.
 
-  2. Open the command line, go to the util/ subdirectory, and run 
-     `python GUI.py`. Enter the IP address to send to, the port number selected
-      in step 1 and select a file to save to (note that all saves are relative 
-      to the `build/` subdirectory). Click 'Send File' - the utility should 
-      print `[...] Starting...` at the bottom, and  then 
-      `[...] Starting... Success` when finished.
-
-  3. There is no outputting of exceptions like there is in the Android app. 
-  Check what you input.
+  2. Open the command line, go to the util/build subdirectory, and run 
+     `java -jar GUI.jar`. Enter the IP address to send to, the port number selected
+      in step 1 and select a file to save to. Click 'Send File' - the button should
+      "stick" while sending the file.
 
 Finally, sending PC -> PC:
   1. On the first computer, go to the util/ subdirectory, and run 
-  `python GUI.py`. Enter a port number, and a file to read. Click
-  `Read File`. The utility should print `[...] Starting...`.
+  `java -jar GUI.jar`. Enter a port number, and a file to read. Click
+  `Read File`. The button should "stick" while waiting.
 
   2. Repeat step 2 above.
 
